--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,10 +6,16 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to 'Posts', posts_path, :class => 'nav-link' %>
-        </li>
         <% if user_signed_in? %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Posts
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to "Create new post", new_post_path, class: "dropdown-item" %>
+              <%= link_to "View posts", posts_path, class: "dropdown-item" %>
+            </ul>
+          </li>
           <li class="nav-item">
             <%= link_to 'Edit profile', edit_user_registration_path, :class => 'nav-link' %>
           </li>
@@ -17,6 +23,9 @@
             <%= link_to "Logout", destroy_user_session_path, :method => :delete, :data => { :no_turbolink => true }, :class => 'nav-link'  %>
           </li>
         <% else %>
+          <li class="nav-item">
+            <%= link_to 'Posts', posts_path, :class => 'nav-link' %>
+          </li>
           <li class="nav-item">
             <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link'  %>
           </li>
