--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,2 @@
-<h1>Edit post</h1>
-
+<h1 class="text-center mt-4">Edit post</h1>
 <%= render 'form' %>
-
-<%= link_to 'Cancel and return to posts listing', posts_path %>
