--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,2 @@
-<h1>Posts listing page</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Desc</th>
-      <th colspan="3">Actions</th>
-    </tr>    
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.description %></td>
-        <td><%= link_to 'Show', post_path(post) %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: "Are you sure?" } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<p>
-  <%= link_to 'Create new post', new_post_path %>
-</p>
+<h1 class="text-center mt-4">Posts listing page</h1>
+<%= render 'post' %>
