--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,2 @@
-<h1>Create a new post</h1>
-
+<h1 class="text-center mt-4">Create a new post</h1>
 <%= render 'form' %>
-
-<%= link_to 'Return to posts listing', posts_path %>
