--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,19 @@
 <h1>Showing post details</h1>
-
-<p><strong>Title: </strong><%= @post.title %></p>
-<p><strong>Description: </strong><%= @post.description %></p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: "Are you sure?" } %> |
-<%= link_to 'Return to posts listing', posts_path %>
+<h2 class="text-center mt-4"><%= @post.title %></h2>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-8 mt-4">
+      <div class="card text-center shadow mb-5 bg-white rounded">
+        <div class="card-body">
+          <div class="card-text text-left"><%= simple_format(@post.description) %></div>
+          <%= link_to "Edit", edit_post_path(@post), class: "btn btn-outline-info" %>
+          <%= link_to "Delete", post_path(@post), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
+        </div>
+        <div class="card-footer text-muted">
+          <small>Created <%= time_ago_in_words(@post.created_at) %> ago, 
+          edited <%= time_ago_in_words(@post.updated_at) %> ago</small>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
