--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,9 @@
 @import 'bootstrap/dist/css/bootstrap';
 
+.search_results em {
+  background-color: yellow;
+}
+
 .navbar {
   background-color: #FDF6EA !important;
 }
