update search field

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -34,11 +34,9 @@
           </li>
         <% end %>
       </ul>
-      <%= form_for :term, url: search_path, method: :get do |form| %>
-        <p>
-          <%= text_field_tag :term, params[:term] %>
-          <%= submit_tag 'Search', name: nil %>
-        </p>
+      <%= form_for(:term, url: search_path, method: :get, html: { class: "d-flex" }) do |form| %>
+        <%= text_field_tag :term, params[:term], class: "form-control me-2", type: "search", placeholder: "Search" %>
+        <%= submit_tag 'Search', class: "btn btn-outline-success", name: nil %>
       <% end %>
     </div>
   </div>
