--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,6 +16,9 @@
               <%= link_to "View posts", posts_path, class: "dropdown-item" %>
             </ul>
           </li>
+          <% if can? :manage, :dashboard %>
+	          <%= link_to 'Admin', rails_admin_path, :class => 'nav-link' %>
+          <% end %>
           <li class="nav-item">
             <%= link_to 'Edit profile', edit_user_registration_path, :class => 'nav-link' %>
           </li>
