--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,3 @@
-<h1 class="text-center mt-4">Posts listing page</h1>
-<%= render 'post' %>
+ <post-index
+  :posts="<%= @posts.to_json %>"
+></post-index>
